# PythonProject8

./: README.md  fix_files.py  main.py  pyproject.toml
src/: __init__.py  category.py  product.py
tests/: conftest.py  test_main.py
